[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-form-button"
version = "1.0.0"
dependencies = ["django"]
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradishbijukchhe@gmail.com" }]
description = "Django admin extra buttons with form"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/django-form-button"
Issues = "https://github.com/sandbox-pokhara/django-form-button/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"django_form_button" = "django_form_button"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
typeCheckingMode = "strict"
